<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.DatailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/favBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fav_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/picMain"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_margin="16dp"
                android:background="@drawable/grey_bg"
                android:padding="16dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/picList"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titleTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="$0"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/titleTxt"
                    app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

                <TextView
                    android:id="@+id/oldPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="$0"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
                    app:layout_constraintStart_toEndOf="@+id/priceTxt"
                    app:layout_constraintTop_toTopOf="@+id/priceTxt" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/oldPriceTxt"
                    app:layout_constraintStart_toEndOf="@+id/oldPriceTxt"
                    app:layout_constraintTop_toTopOf="@+id/oldPriceTxt"
                    app:srcCompat="@drawable/star" />

                <TextView
                    android:id="@+id/ratingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="5"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    app:layout_constraintTop_toTopOf="@+id/imageView12" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/stroke_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/plusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/minusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="-"
                        android:textColor="@color/black"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/numberItemTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/minusBtn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plusBtn" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_color"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_size"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizeList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                tools:layout_margin="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/totalPriceTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$0"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@android:style/Widget.Button"
                    android:background="@drawable/blue_bg"
                    android:id="@+id/addToCartBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/buy_now"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>